--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-alpha.34",
     "@clerk/nextjs": "^6.6.0",
-    "@google/generative-ai": "^0.21.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -25,7 +25,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-email/components": "^0.5.5",
+    "@react-email/components": "^0.5.7",
+    "@react-email/preview-server": "^4.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -34,11 +35,9 @@
     "next": "^15.5.4",
     "next-themes": "^0.4.3",
     "react": "^19.0.0-rc-66855b96-20241106",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-spinner": "^0.2.7",
-    "react-spinners": "^0.14.1",
     "recharts": "^2.14.1",
     "resend": "^4.8.0",
     "sonner": "^1.7.0",
@@ -48,12 +47,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@react-email/preview-server": "^4.2.12",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "prisma": "^6.16.3",
+    "react-day-picker": "9.11.1",
     "react-email": "4.2.12",
+    "react-spinners": "0.17.0",
     "tailwindcss": "^3.4.1"
   }
 }
